Publish basic vert.x app - 17